--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,32 @@
 plugins {
+	id 'java-library'
+	id 'maven-publish'
 	id 'org.springframework.boot' version '2.7.0'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-	id 'java'
+}
+
+dependencies {
+	implementation group: 'com.google.http-client', name: 'google-http-client', version: '1.34.2'
+	implementation 'org.springframework.boot:spring-boot-starter'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 group = 'com.flikendo'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+version = '1.0'
+sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
+jar {
+	archiveClassifier = '' //use empty string
+}aaa
 
-tasks.named('test') {
-	useJUnitPlatform()
+publishing {
+	publications {
+		maven(MavenPublication) {
+			from components.java
+		}
+	}
 }
